potential fix for double tap on iphone

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img {
     position: absolute;
     right: 0;
     margin-top: 3px;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 img:hover{
@@ -52,6 +52,7 @@ button {
     display: block;
     font-size: 16px;
     margin: 5px;
+    touch-action: manipulation;
 }
 button:hover {
     transform: scale(1.1);
